[package]
name = "incremental-sml"
version = "0.1.0"
edition = "2021"
description = "Incremental compilation framework for Standard ML"
repository = "https://github.com/davidmaamoaix/incremental-sml.git"

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
phf = { version = "0.11.2", features = ["macros"] }
string-interner = "0.17.0"
